2008-01-07  Lillian Angel  <langel@redhat.com>

	Fixes Bug #93
	* Makefile.am
	(clean): New target- alias for distclean.
	(ports): New target- alias for stamps/ports.stamp.

2008-01-07  Lillian Angel  <langel@redhat.com>
	
	Fixes Bug #92
	* Makefile.am
	(gcjwebplugin.so): Added check for ENABLE_PLUGIN.
	* Makefile.in: Regenerate.
	* configure: Regenerate.
	* configure.ac: Added option --disable-gcjwebplugin to disable 
	compilation of gcjwebplugin.

2008-01-04  Matthias Klose  <doko@ubuntu.com>

	* configure.ac: Only check for hg if --with-openjdk-src-zip is not
	used.
	* configure: Regenerate.
	* Makefile.am
	(dist-openjdk): Report error if hg is not installed.
	* Makefile.in: Regenerate.

2008-01-03  Lillian Angel  <langel@redhat.com>

	* NEWS: Updated for 1.5 release.

2008-01-03  Lillian Angel  <langel@redhat.com>

	* Makefile.am
	(dist-openjdk): Added check for mercurial forest extension.
	(stamps/clone.stamp): Likewise.
	* Makefile.in: Regenerate.

2007-12-28  Lillian Angel  <langel@redhat.com>

	* rt/java/awt/image/Raster.java
	(createPackedRaster): Added dataType check and fixed if-else
	conditions.
	(createPackedRaster): Likewise.

2007-12-28  Lillian Angel  <langel@redhat.com>

	* rt/java/awt/image/Raster.java
	(createPackedRaster): Changed to create a BytePackedRaster instead of
	a ByteInterleavedRaster.

2007-12-21  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Took out invalid check for ICEDTEA_HOME.
	* Makefile.in: Regenerate.

2007-12-20  Lillian Angel  <langel@redhat.com>

	Fixes Bug #65
	* patches/icedtea-antialias.patch: Removed. Antialiasing works.
	* Makefile.am: Removed antialias patch.
	* Makefile.in: Regenerate.

2007-12-20  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Added checks for ICEDTEA_HOME and SYSTEM_GCJ_DIR.
	* Makefile.in: Regenerate.

2007-12-19  Lillian Angel  <langel@redhat.com>

	* patches/icedtea-version.patch: Added patch to change bug report url.
	* patches/icedtea-ecj.patch: Removed date from generated files.