@@ -1,9 +1,17 @@
+2008-01-07  Dalibor Topic  <robilad@kaffe.org>
+
+	Fixes Bug #95
+	* acinclude.m4: Added additional check for libgcj-4.1.jar, if 
+	libgcj-4.1.2.jar is not found.
+	* configure: Regenerate.
+
 2008-01-07  Lillian Angel  <langel@redhat.com>
 
 	Fixes Bug #93
 	* Makefile.am
 	(clean): New target- alias for distclean.
 	(ports): New target- alias for stamps/ports.stamp.
+	* Makefile.in: Regenerate.
 
 2008-01-07  Lillian Angel  <langel@redhat.com>
 	
